force-app/main/default/objects/Main_Stakeholder__c/Main_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Main Stakeholder</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Main Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Main Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>