force-app/main/default/objects/Main_Stakeholder__c/fields/Integration_Service__c.field-meta.xml
<CustomField>
    <fullName>Integration_Service__c</fullName>
    <label>Integration Service</label>
    <referenceTo>Integration_Service__c</referenceTo>
    <relationshipLabel>Main Stakeholders</relationshipLabel>
    <relationshipName>Main_Stakeholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>