force-app/main/default/objects/Main_Stakeholder__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Stakeholder</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Support Contact</fullName>
            </value>
            <value>
                <fullName>Integration User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>